# TextureEditor

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: EditorState.h  common.h
include/Modules/Controls/: Center.h  Controls.h  Flip.h
include/Modules/Effects/: Blur.h
include/Modules/Effects/Filters/: Binary_Thresholding.h  Blur.h  Brightness_Adjustment.h  Edge_Enhancement.h
include/Modules/Menu/: Image.h  Menu.h
include/Modules/Messaging/: Messenger.h
include/Modules/Report/: Report.h
include/Modules/States/: EditorState.h
include/Modules/States/Memento/: Originator.h
include/Modules/Textures/: Exporter.h  Loader.h
include/modules/filters/: binary_thresholds.h  film_grain.h  gamma_correction.h  grayscale.h
include/modules/menu/: image.h  menu.h
include/modules/states/: editor_state.h
src/: main.cpp
src/Modules/Effects/: Blur.cpp
src/Modules/Effects/Filters/: Blur.cpp  Brightness_Adjustment.cpp  Edge_Enhancement.cpp
src/Modules/Messaging/: Messenger.cpp
src/Modules/Report/: Report.cpp
src/Modules/Textures/: Exporter.cpp  Loader.cpp
src/modules/filters/: brightness_adjustment.cpp  edge_enhancement.cpp  film_grain.cpp  gamma_correction.cpp  grayscale.cpp
